--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,12 +1,8 @@
 @import 'settings';
-@import 'header';
-@import 'menu';
-@import 'hero';
-@import 'partner';
-@import 'actu';
-@import 'shop';
-@import 'classement';
-@import 'story';
-@import 'tv';
-@import 'socios';
+@import 'community';
+@import 'discover';
 @import 'footer';
+@import 'header';
+@import 'hero';
+@import 'join';
+@import 'partner';
