--- a/styles/header.scss
+++ b/styles/header.scss
@@ -23,7 +23,9 @@
     align-items: center;
     justify-content: space-between;
     gap: 1.5rem;
-
+    @media screen and (max-width: 840px) {
+      display: none;
+    }
     &__links {
       display: flex;
       justify-content: center;
@@ -52,7 +54,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: .5rem;
+      gap: 0.5rem;
       button {
         padding: 0.5rem 1.125rem;
         border: 2px solid $green;
@@ -60,29 +62,55 @@
         font-weight: 500;
         cursor: pointer;
         border-radius: 0.5rem;
-        transition: .3s ease;
+        transition: 0.3s ease;
         &:first-child {
-            color: #ffffff;
-            &:hover{
-                opacity: 0.8;
-            }
+          color: #ffffff;
+          &:hover {
+            opacity: 0.8;
           }
+        }
         &:last-child {
-            background: #fff;
-            color: $green;
-            border-color: #fff;
-            &:hover{
-                border-color: $green;
-                background: rgba($color: $green, $alpha: .05);
-            }
+          background: #fff;
+          color: $green;
+          border-color: #fff;
+          &:hover {
+            border-color: $green;
+            background: rgba($color: $green, $alpha: 0.05);
+          }
         }
       }
     }
   }
   .menu-open {
     display: none;
+    @media screen and (max-width: 840px) {
+        display: block;
+      }
   }
-  &-menu {
+  &-overlay {
     display: none;
+    position: fixed;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba($color: #27272A, $alpha: .2);
+    .header-menu{
+        background: #fff;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        &__top{
+
+        }
+        &__items{
+            flex-shrink: 0;
+            flex-grow: 1;
+            background: #000;
+        }
+    }
+    @media screen and (max-width: 840px) {
+        display: flex;
+      }
   }
 }
