--- a/styles/header.scss
+++ b/styles/header.scss
@@ -74,7 +74,7 @@
           color: $green;
           border-color: #fff;
           &:hover {
-            border-color: $green;
+            border-color: #86efac;
             background: rgba($color: $green, $alpha: 0.05);
           }
         }
@@ -84,8 +84,8 @@
   .menu-open {
     display: none;
     @media screen and (max-width: 840px) {
-        display: block;
-      }
+      display: block;
+    }
   }
   &-overlay {
     display: none;
@@ -93,24 +93,97 @@
     inset: 0;
     width: 100%;
     height: 100%;
-    background: rgba($color: #27272A, $alpha: .2);
-    .header-menu{
-        background: #fff;
+    background: rgba($color: #27272a, $alpha: 0.2);
+    .header-menu {
+      width: 300px;
+      background: #fff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      &__top {
+        width: 100%;
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        gap: 1.5rem;
+        padding: 1.25rem 1rem;
+        border-bottom: 1px solid #f4f4f5;
+        img:first-child {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 0.5rem;
+          background: #f0fdf4;
+          border: 1px solid #dcfce7;
+          border-radius: 50%;
+        }
+      }
+      &__items {
+        width: 100%;
+        flex-grow: 1;
         display: flex;
         flex-direction: column;
         align-items: center;
-        justify-content: center;
-        &__top{
-
+        justify-content: flex-start;
+        padding: 1.25rem 1rem;
+        gap: 1.5rem;
+        ul {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          gap: .75rem;
+          width: 100%;
+          a {
+            display: inline-block;
+            text-align: center;
+            width: 100%;
+            font-weight: 400;
+            font-size: 1.125rem;
+            transition: 0.3s color ease;
+            &:hover {
+              color: $green;
+            }
+          }
         }
-        &__items{
-            flex-shrink: 0;
-            flex-grow: 1;
-            background: #000;
+        div {
+            width: 100%;
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-content: center;
+          gap: .75rem;
+          button {
+            width: 100%;
+            padding: 0.5rem 1.125rem;
+            border: 2px solid $green;
+            background: $green;
+            font-weight: 500;
+            cursor: pointer;
+            border-radius: 0.5rem;
+            transition: 0.3s ease;
+            &:first-child {
+              color: #ffffff;
+              &:hover {
+                opacity: 0.8;
+              }
+            }
+            &:last-child {
+              background: #fff;
+              color: $green;
+              border-color: #86efac;
+              &:hover {
+                background: rgba($color: $green, $alpha: 0.05);
+              }
+            }
+          }
         }
+      }
     }
     @media screen and (max-width: 840px) {
-        display: flex;
-      }
+      display: flex;
+      justify-content: flex-end;
+    }
   }
 }
