--- a/styles/header.scss
+++ b/styles/header.scss
@@ -88,12 +88,15 @@
     }
   }
   &-overlay {
+    display: flex;
+    justify-content: flex-end;
     display: none;
     position: fixed;
     inset: 0;
     width: 100%;
     height: 100%;
     background: rgba($color: #27272a, $alpha: 0.2);
+    transition: 0.3s ease;
     .header-menu {
       width: 300px;
       background: #fff;
@@ -101,6 +104,8 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
+      transform: translateX(100%);
+      transition: .3s ease;
       &__top {
         width: 100%;
         display: flex;
@@ -133,7 +138,7 @@
           justify-content: center;
           align-items: center;
           flex-direction: column;
-          gap: .75rem;
+          gap: 0.75rem;
           width: 100%;
           a {
             display: inline-block;
@@ -148,12 +153,12 @@
           }
         }
         div {
-            width: 100%;
+          width: 100%;
           display: flex;
           flex-direction: column;
           align-items: center;
           justify-content: center;
-          gap: .75rem;
+          gap: 0.75rem;
           button {
             width: 100%;
             padding: 0.5rem 1.125rem;
@@ -180,10 +185,12 @@
           }
         }
       }
+      &.show {
+        transform: translateX(0);
+      }
     }
-    @media screen and (max-width: 840px) {
-      display: flex;
-      justify-content: flex-end;
+    &.show {
+        display: flex;
     }
   }
 }
