--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -10,6 +10,30 @@
     align-items: flex-start;
     justify-content: space-between;
     gap: 5rem;
+    @media screen and (max-width: 478px) {
+      flex-direction: column-reverse;
+      gap: 1.5rem;
+      .hero-text {
+        padding-top: 0;
+        gap: 1.5rem;
+        &__top {
+            h1{
+                font-size: 2.5rem;
+                line-height: 40px;
+            }
+            p{
+                font-size: 18px;
+            }
+            div{
+                width: 100%;
+                flex-direction: column;
+                button{
+                    width: 100%;
+                }
+            }
+        }
+      }
+    }
   }
   &-illustration {
     // width: 700px;
@@ -23,11 +47,15 @@
     align-items: flex-start;
     gap: 14rem;
     padding-top: 16rem;
+    @media screen and (max-width: 1120px) {
+      padding-top: 14rem;
+      gap: 10rem;
+    }
     &__top {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
       h1 {
         font-weight: 700;
         font-size: 3.5rem;
@@ -46,7 +74,7 @@
         display: flex;
         align-items: center;
         justify-content: flex-start;
-        gap: .5rem;
+        gap: 0.5rem;
         button {
           padding: 0.5rem 1.125rem;
           border: 2px solid $green;
@@ -72,34 +100,59 @@
         }
       }
     }
-    &__bottom{
+    &__bottom {
+      display: flex;
+      align-items: center;
+      justify-content: flex-start;
+      gap: 1.5rem;
+      div {
         display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 1.5rem;
-        div{
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            h3{
-                color: #27272A;
-                font-weight: 600;
-                font-size: 1.5rem;
-            }
-            span{
-color: #52525B;
-            }
+        flex-direction: column;
+        align-items: flex-start;
+        h3 {
+          color: #27272a;
+          font-weight: 600;
+          font-size: 1.5rem;
         }
+        span {
+          color: #52525b;
+        }
+      }
     }
   }
   &-image.mobile {
     display: none;
+    padding-top: 6rem;
+    .splide{
+        .splide__arrows{
+            display: none;
+        }
+        .splide__list{
+            .splide__slide{
+                height: 380px;
+                border-radius: 50px;
+                overflow: hidden;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+    }
+    @media screen and (max-width: 478px) {
+      display: flex;
+      display: block;
+    }
   }
   &-image.tablet {
     display: flex;
     align-items: center;
     gap: 0.5rem;
     flex-shrink: 0;
+    @media screen and (max-width: 970px) {
+      display: none;
+    }
     div {
       display: flex;
       flex-direction: column;
