--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -17,20 +17,20 @@
         padding-top: 0;
         gap: 1.5rem;
         &__top {
-            h1{
-                font-size: 2.5rem;
-                line-height: 40px;
+          h1 {
+            font-size: 2.5rem;
+            line-height: 40px;
+          }
+          p {
+            font-size: 18px;
+          }
+          div {
+            width: 100%;
+            flex-direction: column;
+            button {
+              width: 100%;
             }
-            p{
-                font-size: 18px;
-            }
-            div{
-                width: 100%;
-                flex-direction: column;
-                button{
-                    width: 100%;
-                }
-            }
+          }
         }
       }
     }
@@ -102,7 +102,7 @@
     }
     &__bottom {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       justify-content: flex-start;
       gap: 1.5rem;
       div {
@@ -123,22 +123,22 @@
   &-image.mobile {
     display: none;
     padding-top: 6rem;
-    .splide{
-        .splide__arrows{
-            display: none;
+    .splide {
+      .splide__arrows {
+        display: none;
+      }
+      .splide__list {
+        .splide__slide {
+          height: 380px;
+          border-radius: 50px;
+          overflow: hidden;
+          img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+          }
         }
-        .splide__list{
-            .splide__slide{
-                height: 380px;
-                border-radius: 50px;
-                overflow: hidden;
-                img{
-                    width: 100%;
-                    height: 100%;
-                    object-fit: cover;
-                }
-            }
-        }
+      }
     }
     @media screen and (max-width: 478px) {
       display: flex;
