--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -20,13 +20,16 @@
           h1 {
             font-size: 2.5rem;
             line-height: 40px;
+            animation: none;
           }
           p {
             font-size: 18px;
+            animation: none;
           }
           div {
             width: 100%;
             flex-direction: column;
+            animation: none;
             button {
               width: 100%;
             }
@@ -63,18 +66,51 @@
         display: flex;
         align-items: center;
         color: $black;
+        animation: introHeroH1 1s ease forwards;
+        @keyframes introHeroH1 {
+          from {
+            transform: translateY(-100%);
+            opacity: 0;
+          }
+          to {
+            transform: translateY(0);
+            opacity: 1;
+          }
+        }
       }
       p {
         font-weight: 400;
         font-size: 20px;
         line-height: 24px;
         color: $gray;
+        animation: introHeroP 1s ease forwards;
+        @keyframes introHeroP {
+          from {
+            transform: scale(0.8);
+            opacity: 0;
+          }
+          to {
+            transform: scale(1);
+            opacity: 1;
+          }
+        }
       }
       div {
         display: flex;
         align-items: center;
         justify-content: flex-start;
         gap: 0.5rem;
+        animation: introHeroButton 1s ease forwards;
+        @keyframes introHeroButton {
+          from {
+            transform: translateY(100%);
+            opacity: 0;
+          }
+          to {
+            transform: translateY(0);
+            opacity: 1;
+          }
+        }
         button {
           padding: 0.5rem 1.125rem;
           border: 2px solid $green;
@@ -166,6 +202,59 @@
       height: 400px;
       object-fit: cover;
       border-radius: 75px;
+    }
+
+    .hero-image_1 {
+      animation: introHeroImg1 1s ease forwards;
+      @keyframes introHeroImg1 {
+        from {
+          transform: translateX(-100%);
+          opacity: 0;
+        }
+        to {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
+    }
+    .hero-image_2 {
+      animation: introHeroImg2 1s ease forwards;
+      @keyframes introHeroImg2 {
+        from {
+          transform: translateY(-100%);
+          opacity: 0;
+        }
+        to {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
+    }
+    .hero-image_3 {
+      animation: introHeroImg3 1s ease forwards;
+      @keyframes introHeroImg3 {
+        from {
+          transform: translateY(100%);
+          opacity: 0;
+        }
+        to {
+          transform: translateY(0);
+          opacity: 1;
+        }
+      }
+    }
+    .hero-image_4 {
+      animation: introHeroImg4 1s ease forwards;
+      @keyframes introHeroImg4 {
+        from {
+          transform: translateX(100%);
+          opacity: 0;
+        }
+        to {
+          transform: translateX(0);
+          opacity: 1;
+        }
+      }
     }
   }
 }
