--- a/styles/hero.scss
+++ b/styles/hero.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 2.5rem;
   &__container {
     width: 95%;
     max-width: 1280px;
