--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,6 +1,6 @@
 @import 'settings';
 @import 'community';
-@import 'discover';
+@import 'articles';
 @import 'footer';
 @import 'header';
 @import 'hero';
