--- a/styles/articles.scss
+++ b/styles/articles.scss
@@ -18,9 +18,13 @@
     }
   }
   &-text {
+    width: 60%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    @media screen and (max-width: 840px) {
+      width: 100%;
+    }
     gap: 0.5rem;
     h2 {
       font-weight: 700;
@@ -28,7 +32,7 @@
       font-size: 2.5rem;
 
       @media screen and (max-width: 478px) {
-        line-height: 20px;
+        line-height: 35px;
         font-size: 2rem;
       }
     }
